opam-version: "2.0"
version: "0.1.1~"
license: "MIT"
maintainer: "Kate <kit-ty-kate@outlook.com>"
authors: "Kate <kit-ty-kate@outlook.com>"
homepage: "https://github.com/kit-ty-kate/opam-health-check-ng"
dev-repo: "git+https://github.com/kit-ty-kate/opam-health-check-ng"
bug-reports: "https://github.com/kit-ty-kate/opam-health-check-ng/issues"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.14.0"}
  "dune" {>= "1.0"}
  "tyxml" {>= "4.3.0"}
  "cohttp"
  "cohttp-lwt"
  "cohttp-lwt-unix"
  "conduit-lwt-unix" {>= "6.2.0"}
  "http-lwt-client" {>= "0.2.0"}
  "containers" {>= "3.4"}
  "opam-core" {>= "2.2"}
  "opam-format" {>= "2.2"}
  "mirage-crypto-pk" {>= "0.11.0"}
  "mirage-crypto-rng" {>= "0.11.0"}
  "mirage-crypto-rng-lwt" {>= "0.11.0"}
  "cmdliner" {>= "1.1.0"}
  "fpath"
  "fmt" {>= "0.8.7"}
  "re" {>= "1.7.2"}
  "yaml" {>= "2.0.0"}
  "sexplib" {>= "v0.9.0"}
  "sexplib0" {>= "v0.9.0"}
  "xdg-basedir" {>= "0.0.4"}
  "dockerfile" {>= "8.2.0"}
  "current_ansi" {>= "0.1"}
  "yojson" {>= "1.6.0"}
  "github"
  "github-unix"
  "github-data"
  "cstruct"
  "lwt"
  "lwt_ppx"
  "uri"
  "docker_hub" {>= "0.2.0"}
  "memtrace"
  "domain_shims" # TODO: remove when we require OCaml >= 5.0
  "tls-lwt" {>= "0.16.0"} # activate conduit with TLS for slack webhooks
  "conf-libev" # Required for lwt to avoid hitting the limits of select(2)
  "conf-pixz" # TODO: Make it a library
  # TODO: Add conf-ugrep
]
conflicts: [
  "dns-client-lwt" {< "6.1.4"} # Required to fix https://github.com/roburio/http-lwt-client/issues/8
  "happy-eyeballs-lwt" {< "0.1.3"} # Required to fix https://github.com/roburio/http-lwt-client/issues/8
  "opam-health-check"
]
synopsis: "A toolchain to check for broken opam packages locally"
