opam-version: "2.0"
version: "0.1.1~"
license: "MIT"
maintainer: "Kate <kit-ty-kate@outlook.com>"
authors: "Kate <kit-ty-kate@outlook.com>"
homepage: "https://github.com/kit-ty-kate/opam-health-check-ng"
dev-repo: "git+https://github.com/kit-ty-kate/opam-health-check-ng"
bug-reports: "https://github.com/kit-ty-kate/opam-health-check-ng/issues"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "5.2.0"}
  "dune" {>= "3.17"}
  "tyxml" {>= "4.3.0"}
  "extunix" {>= "0.4.1"}
  "httpcats" {>= "0.1.0"}
  "containers" {>= "3.4"}
  "opam-core" {>= "2.5.0"}
  "opam-format" {>= "2.5.0"}
  "mirage-crypto-pk" {>= "2.0.0"}
  "mirage-crypto-rng" {>= "2.0.0"}
  "x509" {>= "1.0.0"}
  "cmdliner" {>= "1.1.0"}
  "fpath"
  "fmt" {>= "0.8.7"}
  "re" {>= "1.7.2"}
  "yaml" {>= "2.0.0"}
  "xdg-basedir" {>= "0.0.4"}
  "dockerfile" {>= "8.2.0"}
  "current_ansi" {>= "0.1"}
  "yojson" {>= "1.6.0"}
  "lwt" # required for github
  "github"
  "github-unix"
  "github-data"
  "miou" {>= "0.4.0"}
  "uri"
  "docker_hub" {>= "0.2.0"}
  "memtrace"
  "conf-pixz" # TODO: Make it a library
  # TODO: Add conf-ugrep
]
conflicts: [
  "opam-health-check"
]
synopsis: "A toolchain to check for broken opam packages locally"
