(executable
  (name client)
  (public_name opam-health-check)
  (libraries
    x509
    lwt.unix
    mirage-crypto-pk
    httpcats
    containers
    xdg-basedir
    fpath
    uri
    miou
    miou.unix
    oca_lib
    cmdliner
    yaml))

(rule
  (with-stdout-to config.ml
    (progn
      (echo "let name = {|opam-health-check|}\n")
      (echo "let version = {|%{version:opam-health-check-ng}|}\n"))))
