(library
  (name backend)
  (libraries
    unix
    oca_lib
    fmt
    uri
    lwt
    extunix
    lwt.unix
    lwt_direct
    fpath
    astring
    xdg-basedir
    cohttp
    cohttp-lwt
    cohttp-lwt-unix
    docker_hub
    httpaf
    http-lwt-client
    containers
    oca_server
    opam-core
    opam-format
    dockerfile
    github
    github-unix
    github-data
    x509
    mirage-crypto-pk
    mirage-crypto-rng.unix))
