(library
  (name backend)
  (libraries
    unix
    miou
    miou.unix
    httpcats
    oca_lib
    fmt
    uri
    extunix
    fpath
    astring
    xdg-basedir
    docker_hub
    containers
    oca_server
    opam-core
    opam-format
    dockerfile
    github
    github-unix
    github-data
    lwt.unix
    x509
    mirage-crypto-pk
    mirage-crypto-rng.unix))
