(library
  (name oca_server)
  (modules_without_implementation backend_intf)
  (preprocess (pps lwt_ppx))
  (libraries
    unix
    lwt
    lwt.unix
    tyxml
    tyxml.functor
    cohttp
    cohttp-lwt
    cohttp-lwt-unix
    opam-format
    containers
    fpath
    uri
    re
    yojson
    current_ansi
    oca_lib))
