(library
  (name oca_server)
  (modules_without_implementation backend_intf)
  (libraries
    unix
    miou
    miou.unix
    miou.sync
    bigstringaf
    h1
    h2
    httpcats
    tyxml
    tyxml.functor
    opam-format
    containers
    fpath
    uri
    re
    yojson
    current_ansi
    oca_lib))
